feat: Remove fallback handling and add return functionality
- Removed the FallbackPlanner class to streamline fallback logic directly within StickyRouter and StickySessionManager.
- Updated StickyRouter to manage player return eligibility and fallback routing without relying on FallbackPlanner.
- Enhanced StickySessionManager to handle sticky wait logic and server connection attempts more efficiently.
- Introduced new methods for managing return eligibility and server connection attempts.
- Added functionality to load and save last listed servers in PlayerStateStore.
- Updated LobbyConfig and related tests to reflect changes in fallback policy handling.
- Introduced ReturnSpecial class for managing special item removals during player returns.
- Added tests for LobbyConfigLoader to ensure valid YAML configuration handling.

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ java { toolchain { languageVersion = JavaLanguageVersion.of(17) } }
 
 repositories {
   mavenCentral()
-  maven { url = 'https://repo.velocitypowered.com/snapshots/' }
+  // Velocity artifacts are hosted via PaperMC's repository (includes snapshots/releases)
+  maven { url = 'https://repo.papermc.io/repository/maven-public/' }
 }
 
 dependencies {
