--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
   // Use a published release:
   compileOnly 'com.velocitypowered:velocity-api:3.2.0-SNAPSHOT'
   annotationProcessor 'com.velocitypowered:velocity-api:3.2.0-SNAPSHOT'
+  compileOnly 'com.google.code.gson:gson:2.10.1'
   implementation "org.yaml:snakeyaml:2.2"
   testImplementation 'com.velocitypowered:velocity-api:3.2.0-SNAPSHOT'
   testImplementation 'org.slf4j:slf4j-api:2.0.13'
